--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
                                 <div class="mt-4">
                                 <p>
                                     {% if result2 != None %}
-                                    <img src="________________________" height="450" width=500>
+                                    <img src="data:image/png;base64,{{ result2 }}" height="450" width=500>
                                     {% endif %}
                                 </p>
                             </div>
@@ -83,7 +83,7 @@
                         <div class="mt-4">
                             <p>
                                 {% if result3 != None %}
-                                <img src="______________________________" width=450>
+                                <img src="data:image/png;base64,{{ result3 }}" width=450>
                                 {% endif %}
                             </p>
                         </div>
@@ -91,11 +91,11 @@
                 </div>
                 <div class="col-md-10 col-lg-6 col-sm-10">
                     <div class="plot-area">
-                        <h2 class='lead'>Price Strategy</h2>
+                        <h2 class='lead'>Most Version Downloaded</h2>
                         <div class="mt-4">
                             <p>
                                 {% if result4 != None %}
-                                <img src="___________________________" width="450">
+                                <img src="data:image/png;base64,{{ result4 }}" width="700" height="">
                                 {% endif %}
                             </p>
                         </div>
